--- a/src/components/CarouselImages/styles.css
+++ b/src/components/CarouselImages/styles.css
@@ -1,7 +1,8 @@
-.container-carrossel-images {
+.container-carousel-images {
     height: 290px;
-    width: 440px;
-    padding: 5px;
+    width: 100%;
+    max-width: 440px;
+    padding: 5px 0px;
     display: flex;
     overflow-y: hidden;
     position: relative;
@@ -13,7 +14,7 @@
     backdrop-filter: blur(10px);
 }
 
-.container-carrossel-images::-webkit-scrollbar {
+.container-carousel-images::-webkit-scrollbar {
     display: none;
 }
 
