--- a/src/components/ExperienceLine/styles.css
+++ b/src/components/ExperienceLine/styles.css
@@ -1,3 +1,9 @@
+#container-experience-line {
+    overflow-y: auto;
+    padding-top: 30px;
+    height: 170px;
+}
+
 .timeline {
     width: 100%;
     height: 5px;
@@ -9,14 +15,13 @@
 
 .indication-line {
     width: 5px;
+    height: 100px;
     background-color: var(--secondary-color);
     border-radius: 999px;
-    position: absolute;
-    z-index: 0;
 }
 
 .company-timeline {
-    width: 90px;
+    width: 100%;
     height: 5px;
     border-radius: 999px;
     background-color: var(--secondary-color);
@@ -36,22 +41,4 @@
     font-weight: bold;
     z-index: 10;
     font-size: 15px;
-    top: 53px;
-}
-
-@media (max-width: 450px) {
-    .company-timeline {
-        width: 70px;
-    }
-}
-
-@media (min-width: 1100px) {
-    .company-timeline {
-        width: 200px;
-        height: 5px;
-        border-radius: 999px;
-        background-color: var(--secondary-color);
-        position: absolute;
-        z-index: 9;
-    }
 }
