--- a/src/components/ExperienceLine/styles.css
+++ b/src/components/ExperienceLine/styles.css
@@ -2,6 +2,27 @@
     overflow-y: auto;
     padding-top: 30px;
     height: 170px;
+    transform: rotateX(180deg);
+}
+
+#rotate-180{
+    transform: rotateX(180deg);
+}
+
+#container-experience-line::-webkit-scrollbar {
+    height: 10px;
+    background: white;
+}
+
+#container-experience-line::-webkit-scrollbar-thumb {
+    background: var(--secondary-color);
+    opacity: 0.7;
+    border: 1px white solid;
+}
+
+#container-experience-line::-webkit-scrollbar-thumb:hover {
+    background: var(--secondary-color);
+    opacity: 1;
 }
 
 .timeline {
