fix: ajuste estilo que estava com bug

--- a/src/components/Menu/styles.css
+++ b/src/components/Menu/styles.css
@@ -9,6 +9,10 @@
   width: 200px;
 }
 
+.animation-slidein:hover{
+  width: 210px;
+}
+
 .animation-slideout{
   animation-duration: var(--animation-duration) !important;
   animation: slideout;
