--- a/src/components/CarouselImages/styles.css
+++ b/src/components/CarouselImages/styles.css
@@ -2,16 +2,27 @@
     height: 290px;
     width: 100%;
     max-width: 440px;
-    padding: 5px 0px;
     display: flex;
     overflow-y: hidden;
     position: relative;
     border-radius: 20px;
 }
 
-.button-arrow-image:hover {
+.button-arrow-image {
     cursor: pointer;
+    opacity: 0;
+    background-color: var(--secondary-color);
     backdrop-filter: blur(10px);
+}
+
+.prev {
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
+}
+
+.prox {
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 .container-carousel-images::-webkit-scrollbar {
@@ -21,4 +32,16 @@
 .image-project {
     transition: transform 1s;
     transform: translateX(calc(var(--image-selected) * -100%));
+}
+
+@media (min-width: 1201px) {
+    .button-arrow-image:hover {
+        opacity: 1;
+    }
+}
+
+@media (max-width: 1200px) {
+    .button-arrow-image {
+        opacity: 1;
+    }
 }
