--- a/src/components/ExperienceLine/styles.css
+++ b/src/components/ExperienceLine/styles.css
@@ -68,3 +68,19 @@
     z-index: 10;
     font-size: 15px;
 }
+
+@keyframes click {
+    0%   { font-size: 40px;; opacity: 0; }
+  10%  { opacity: 1; }
+  30%  { font-size: 30px; }
+  50%  { font-size: 40px; }
+  80%  { opacity: 1; }
+  100% { opacity: 0; }
+  }
+  
+  .animate-click {
+    font-size: 40px;
+    animation: click 2s ease-in-out infinite;
+    animation-delay: 0 10s;
+    pointer-events: none;
+  }
